Release ...
* [nt]roff: The ".pso" request has been added; it reads the output of
  a command as input to troff.
* [nt]roff: The ".tmc" request has been added; it works like ".tm" but
  does not terminate the message with a newline.
* [nt]roff: The ".open", ".opena", ".write", ".writec", and ".close"
  requests have been added. They work like ".tm" but write to a named
  file.
* [nt]roff: A "-msafe" macro package has been added; it disables those
  requests that allow to execute commands or to write to files. It is
  mainly useful for viewing manual pages.
* pic: An "-S" option has been added to disable the "sh" element.
* grap: An "-S" option has been added to disable the "sh" command.
* nroff: Recognize the "\s'n'" escape sequence and discard it for
  compatibility with troff.

Release 051202
* [nt]roff: When text is written to a diversion in nofill mode, spacing
  characters are preserved. This allows the text in the diversion to be
  adjusted later when it is actually printed. The "-X" option disables
  the new behavior.
* [nt]roff: The static limit on the number of if-else constructs has
  been removed.
* [nt]roff: The static limit on the number of nested diversions has been
  removed.
* [nt]roff: A maximum of 2000 characters (bytes) is now allowed as the
  total of all arguments to a macro.
* dpost: The inclusion of PostScript pictures has been fixed; it could
  generate invalid PostScript programs since release 051025 under certain
  circumstances.
* dpost: A "x X PSSetup" device request to support a "\X'PSSetup: ...'"
  escape sequence has been added. It can be used to include arbitrary
  PostScript code in the setup section of the output file.
* dpost/troff -mcolor: CMYK colors and arbitrary PostScript color spaces
  can now be used. The "setcolor" procedure in "color.ps" has been renamed
  to "_setcolor" in order to make this possible.
* [nt]roff: A ".psbb" command is now available to retrieve the bounding box