@@ -32,15 +32,15 @@ n10.o: n10.c ../tdef.h ../ext.h tw.h proto.h
 n6.o: n6.c ../tdef.h tw.h proto.h ../ext.h
 hytab.o: ../hytab.c
 malloc.o: ../malloc.c ../mallint.h
-n1.o: ../n1.c ../tdef.h ../ext.h ./proto.h
-n2.o: ../n2.c ../tdef.h ./proto.h ../ext.h
-n3.o: ../n3.c ../tdef.h ./proto.h ../ext.h
-n4.o: ../n4.c ../tdef.h ./proto.h ../ext.h
-n5.o: ../n5.c ../tdef.h ../ext.h
-n7.o: ../n7.c ../tdef.h ./proto.h ../ext.h
+n1.o: ../n1.c ../tdef.h ../ext.h ./proto.h tw.h
+n2.o: ../n2.c ../tdef.h ./proto.h ../ext.h tw.h
+n3.o: ../n3.c ../tdef.h ./proto.h ../ext.h tw.h
+n4.o: ../n4.c ../tdef.h ./proto.h ../ext.h tw.h
+n5.o: ../n5.c ../tdef.h ./proto.h ../ext.h tw.h
+n7.o: ../n7.c ../tdef.h ./proto.h ../ext.h tw.h
 n8.o: ../n8.c ../tdef.h ../ext.h ./proto.h
-n9.o: ../n9.c ../tdef.h ./proto.h ../ext.h
+n9.o: ../n9.c ../tdef.h ./proto.h ../ext.h tw.h
 ni.o: ../ni.c ../tdef.h ./proto.h
-nii.o: ../nii.c ../tdef.h ./proto.h ../ext.h
+nii.o: ../nii.c ../tdef.h ./proto.h ../ext.h tw.h
 suftab.o: ../suftab.c
 version.o: ../version.c
