@@ -6,6 +6,9 @@ Release ...
 * [nt]roff: The ".open", ".opena", ".write", ".writec", and ".close"
   requests have been added. They work like ".tm" but write to a named
   file.
+* [nt]roff: The ".spreadlimit" request has been added; it can be used
+  to print a warning when the adjustment computed for an output line
+  exceeds a certain value.
 * [nt]roff: A "-msafe" macro package has been added; it disables those
   requests that allow to execute commands or to write to files. It is
   mainly useful for viewing manual pages.
